overflow fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -386,7 +386,6 @@ header span {
   position: relative;
   padding: 0 18px;
   margin-top: 80px;
-  overflow: hidden;
 }
 
 .api_logo {
